<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">童e家</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_frist">首页</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oldpassword">旧密码</string>
    <string name="newpassword">新密码</string>
    <string name="confimpassword">确认密码</string>
    <string name="order">提交</string>
    <string name="ordertotal">订单总额：¥</string>
    <string name="confimshouhuo">确认收货</string>
    <string name="querylogistics">查询物流</string>
    <string name="ordernumber">订单编号：</string>
    <string name="ordertime">下单时间：</string>
    <string name="orderstate">状态</string>


    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_goods_detail">GoodsDetailActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_ji_fen">JiFenActivity</string>
    <string name="title_activity_ke_fu">KeFuActivity</string>
    <string name="title_activity_money_pagce">MoneyPagceActivity</string>
    <string name="title_activity_all_order">AllOrderActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_un_pay">UnPayActivity</string>
    <string name="title_activity_daishouhuo">DaishouhuoActivity</string>
    <string name="title_activity_tuihuanhuo">TuihuanhuoActivity</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="confimpay">确认支付</string>
    <string name="title_activity_goods_sort">GoodsSortActivity</string>
    <string name="title_activity_goods_sort_detail">GoodsSortDetail</string>
    <string name="title_activity_confim">ConfimActivity</string>
    <string name="title_activity_find_pass_word">FindPassWordActivity</string>
    <string name="btn_shouhou">申请售后</string>
    <string name="tv_cont">400-600-9388</string>
    <string name="tv_express_number">请填写快递单号</string>
    <string name="tv_expressnumber">快递单号:</string>
    <string name="tv_express_name">快递公司:</string>
    <string name="ed_express_number">请选择快递单号</string>
    <string name="ed_choose_express_compang">请选择物流公司</string>


</resources>
