<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <RelativeLayout
      android:id="@+id/re_top"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:background="@color/gray"
      >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tv_express_number"
          android:layout_centerVertical="true"
          android:layout_marginLeft="@dimen/maginleftscree"
          />

      <ImageView
          android:id="@+id/ic_cannel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/cancel"
          android:layout_centerVertical="true"
          android:layout_alignParentRight="true"
          android:layout_marginRight="@dimen/maginleftscree"
          />
  </RelativeLayout>

<LinearLayout
    android:id="@+id/linearlayout"
    android:layout_below="@+id/re_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:id="@+id/textView12"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/maginleftscree"
            android:text="@string/tv_expressnumber"/>

        <EditText
            android:id="@+id/et_entry_expressnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:hint="@string/ed_express_number"
            />


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView

            android:id="@+id/textView13"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/maginleftscree"

            android:text="@string/tv_express_name"/>

        <EditText
            android:id="@+id/ed_express_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableRight="@mipmap/sanjia_"
            android:hint="@string/ed_choose_express_compang"
            />

    </LinearLayout>




</LinearLayout>


<FrameLayout
    android:layout_below="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ListView
        android:id="@+id/dialog_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="95dp"
        android:divider="@color/white"
        android:dividerHeight="1dp"
        android:visibility="invisible"
        ></ListView>

    <Button
        android:id="@+id/dialog_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/maginleftscree"
        android:layout_marginRight="@dimen/maginleftscree"
        android:layout_marginTop="@dimen/maginleftscree"
        android:background="@color/HotPink"
        android:text="@string/sure"
        />

</FrameLayout>


</RelativeLayout>
