<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordernumber"/>

            <TextView
                android:id="@+id/tv_shouhounumber"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="2014051095482758"/>

            <TextView
                android:id="@+id/tv_shouhoustate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/orderstate"
                android:textColor="@color/red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordertime"/>

            <TextView
                android:id="@+id/tv_shouhoutime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2015—15-45-20-44"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_recouce"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="fitXY"
        android:layout_alignLeft="@+id/linearLayout6"
        android:layout_alignStart="@+id/linearLayout6"
        android:layout_below="@+id/linearLayout6"
        android:layout_marginTop="13dp"
        app:srcCompat="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_alignTop="@+id/img_recouce"
        android:layout_toRightOf="@+id/img_recouce"
        android:layout_toEndOf="@+id/img_recouce"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"/>

    <TextView
        android:id="@+id/tv_number_shouhou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="数量：x10"
        android:layout_alignBottom="@+id/img_recouce"
        android:layout_alignLeft="@+id/tv_title"
        android:layout_alignStart="@+id/tv_title"/>

    <Button
        android:id="@+id/btn_shouhoushengqing"
        android:background="@drawable/btn_red_stroke"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/tv_number_shouhou"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/red"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="售后申请"/>

</RelativeLayout>
