<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    tools:context="com.example.hanlian.Activity.ForgetPassWordActivity">

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_navbar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="修改密码"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <View
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/line_color" />

        <ImageView
            android:id="@+id/img_forgetpasswordback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="21dp"
            android:src="@drawable/ic_back" />

    </RelativeLayout>





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/linearlayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <TextView
            android:id="@+id/tv_newpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"

            android:text="@string/newpassword"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="28dp"/>

        <EditText
            android:id="@+id/ed_newpassword"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_weight="0.10"
            android:layout_marginRight="21dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginEnd="21dp"
            android:layout_alignBaseline="@+id/tv_newpassword"
            android:layout_alignBottom="@+id/tv_newpassword"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearlayout1"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/RelativeLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:text="@string/oldpassword"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="28dp"/>

        <EditText
            android:id="@+id/ed_oldpassword"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:layout_marginRight="21dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="numberPassword"
            android:layout_marginEnd="21dp"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:layout_marginTop="22dp"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_weight="1"
            android:text="@string/confimpassword"
            android:layout_marginStart="27dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/ed_confimpassword"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:ems="10"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/order"/>


</RelativeLayout>
